@@ -17,8 +17,8 @@ package org.springframework.data.repository.config;
 
 import static org.springframework.beans.factory.config.BeanDefinition.*;
 
+import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
@@ -27,6 +27,7 @@ import java.util.stream.Stream;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+
 import org.springframework.beans.factory.config.BeanDefinition;
 import org.springframework.beans.factory.config.RuntimeBeanReference;
 import org.springframework.beans.factory.support.AbstractBeanDefinition;
@@ -120,7 +121,8 @@ class RepositoryBeanDefinitionBuilder {
 				extension.getDefaultNamedQueryLocation());
 		configuration.getNamedQueriesLocation().ifPresent(definitionBuilder::setLocations);
 
-		String namedQueriesBeanName = BeanDefinitionReaderUtils.uniqueBeanName(extension.getModuleIdentifier() + ".named-queries", registry);
+		String namedQueriesBeanName = BeanDefinitionReaderUtils
+				.uniqueBeanName(extension.getModuleIdentifier() + ".named-queries", registry);
 		BeanDefinition namedQueries = definitionBuilder.build(configuration.getSource());
 		registry.registerBeanDefinition(namedQueriesBeanName, namedQueries);
 
@@ -138,41 +140,43 @@ class RepositoryBeanDefinitionBuilder {
 	}
 
 	// TODO: merge that with the one that creates the BD
-	RepositoryMetadata buildMetadata(RepositoryConfiguration<?> configuration) {
+	RepositoryConfigurationAdapter<?> buildMetadata(RepositoryConfiguration<?> configuration) {
 
 		ImplementationDetectionConfiguration config = configuration
 				.toImplementationDetectionConfiguration(metadataReaderFactory);
 
-		List<RepositoryFragmentConfiguration> repositoryFragmentConfigurationStream = fragmentMetadata.getFragmentInterfaces(configuration.getRepositoryInterface()) //
+		List<RepositoryFragmentConfiguration> repositoryFragmentConfigurationStream = fragmentMetadata
+				.getFragmentInterfaces(configuration.getRepositoryInterface()) //
 				.map(it -> detectRepositoryFragmentConfiguration(it, config)) //
-				.flatMap(Optionals::toStream)
-				.collect(Collectors.toList());//
+				.flatMap(Optionals::toStream).toList();
 
-		if(repositoryFragmentConfigurationStream.isEmpty()) {
+		if (repositoryFragmentConfigurationStream.isEmpty()) {
 
 			ImplementationLookupConfiguration lookup = configuration.toLookupConfiguration(metadataReaderFactory);
 			Optional<AbstractBeanDefinition> beanDefinition = implementationDetector.detectCustomImplementation(lookup);
 
-			if(beanDefinition.isPresent()) {
+			if (beanDefinition.isPresent()) {
 				repositoryFragmentConfigurationStream = new ArrayList<>(1);
 
-				List<String> interfaceNames = fragmentMetadata.getFragmentInterfaces(configuration.getRepositoryInterface()).collect(Collectors.toList());
+				List<String> interfaceNames = fragmentMetadata.getFragmentInterfaces(configuration.getRepositoryInterface())
+						.toList();
 				String implClassName = beanDefinition.get().getBeanClassName();
 
 				try {
-					for (String iName : metadataReaderFactory.getMetadataReader(implClassName).getClassMetadata().getInterfaceNames()) {
-						if(interfaceNames.contains(iName)) {
+					for (String iName : metadataReaderFactory.getMetadataReader(implClassName).getClassMetadata()
+							.getInterfaceNames()) {
+						if (interfaceNames.contains(iName)) {
 							repositoryFragmentConfigurationStream.add(new RepositoryFragmentConfiguration(iName, implClassName));
 							break;
 						}
 					}
-				} catch (Exception e) {
-					e.printStackTrace();
+				} catch (IOException e) {
+					throw new IllegalStateException(e);
 				}
 			}
 		}
 
-		return new RepositoryMetadata(configuration, repositoryFragmentConfigurationStream);
+		return new RepositoryConfigurationAdapter<>(configuration, repositoryFragmentConfigurationStream);
 	}
 
 	private Optional<String> registerCustomImplementation(RepositoryConfiguration<?> configuration) {
